Tree is now in a dialog box behind a "browse" button Add button inserts a new value into radio button/checkbox list
svn path=/plone.formwidget.contenttree/trunk/; revision=25772

--- a/plone/formwidget/contenttree/TODO.txt
+++ b/plone/formwidget/contenttree/TODO.txt
@@ -1,10 +1,10 @@
 plone.formwidget.contenttree to-do
 ==================================
 
- - Put the tree in a dialog box behind a "browse" button
- - Make the select event store the selected value in memory only
- - Make add button insert a new value into radio button/checkbox list
- 
+ - Add favorites and recent items
+ - Add search to dialog box
+ - Get the multi_select value based on the widget
+
 The design:
 -----------
 
