conditional import for Plone trunk
svn path=/plone.formwidget.contenttree/trunk/; revision=26748

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,12 @@
 Changelog
 =========
 
+1.0a2 - unreleased
+------------------
+
+* Import SitemapNavtreeStrategy conditionally so it doesn't break on Plone
+  trunk. [davisagli]
+
 1.0a1 - 2009-04-17
 ------------------
 
