Fix display widgets
svn path=/plone.formwidget.contenttree/trunk/; revision=27692

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -4,6 +4,9 @@ Changelog
 1.0a2 - unreleased
 ------------------
 
+* Fix display widgets.
+  [optilude]
+
 * Import SitemapNavtreeStrategy conditionally so it doesn't break on Plone
   trunk. [davisagli]
 
