--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,13 @@
 Changelog
 =========
 
+1.0a3 - 2009-07-12
+------------------
+
+* Apply patch from Gerhard Weis to make the lightbox play nicer with CSS
+  z-indexes.
+  [optilude]
+
 1.0a3 - 2009-06-29
 ------------------
 
