Don't filter children of non-queriable parent types (e.g. Large Plone Folders).
svn path=/plone.formwidget.contenttree/trunk/; revision=28313

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,13 @@
 Changelog
 =========
 
+1.0a4 - 2009-08-02
+------------------
+
+* Don't filter children of non-queriable parent types (e.g. Large Plone
+  Folders).
+  [optilude]
+
 1.0a3 - 2009-07-12
 ------------------
 
