_filter is used outside the source, so not an internal helper function anymore.
svn path=/plone.formwidget.contenttree/trunk/; revision=49347

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -4,6 +4,9 @@ Changelog
 1.0.1 (unreleased)
 ------------------
 
+* _filter is used outside the source, so not an internal helper function
+  anymore.
+  [lentinj]
 
 1.0 (2011-04-30)
 ----------------
