Add comment that reflects the other changes in this set
svn path=/plone.formwidget.contenttree/trunk/; revision=49395

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -7,7 +7,8 @@ Changelog
 * Add a UUIDSource that has plone.uuid values.
   [lentinj]
 
-* Rename methods so that actually-public methods have public names
+* Use tokens as full URL of content, move all token<->value operations into the
+  source. Rename methods so that actually-public methods have public names
   [lentinj]
 
 * Alter terms so that token is the full path to an item, value is the path
