Check the request for context before falling back to getSite()
svn path=/plone.formwidget.contenttree/trunk/; revision=49398

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -4,6 +4,9 @@ Changelog
 1.0.1 (unreleased)
 ------------------
 
+* Check the request for context before falling back to getSite()
+  [lentinj]
+
 * Add a UUIDSource that has plone.uuid values.
   [lentinj]
 
