Add more cases for finding context. Workaround for sources being used without being bound first
svn path=/plone.formwidget.contenttree/trunk/; revision=49399

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -4,6 +4,9 @@ Changelog
 1.0.1 (unreleased)
 ------------------
 
+* Workaround for sources being used without being bound first.
+  [lentinj]
+
 * Check the request for context before falling back to getSite()
   [lentinj]
 
