Prepare plone.formwidget.contenttree 1.0.3.

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,12 @@
 Changelog
 =========
 
+1.0.3 (2011-09-24)
+------------------
+
+* Add zh_CN translation.
+  [jianaijun]
+
 1.0.2 (2011-07-02)
 ------------------
 
