--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,12 @@
 Changelog
 =========
 
+1.0.5 (unreleased)
+------------------
+
+* Added Spanish translation
+  [hvelarde]
+
 1.0.4 (2011-10-04)
 ------------------
 
