--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -4,6 +4,9 @@ Changelog
 1.0.6 (unreleased)
 ------------------
 
+* Added Finnish (fi) translation.
+  [dokai]
+
 * By default filter out nodes that are not selectable and not folderish.
   This can be overridden on the widget by setting show_all_nodes to True.
   [maurits]
