--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -4,6 +4,10 @@ Changelog
 1.0.6 (unreleased)
 ------------------
 
+* Import ViewPageTemplateFile from zope.browserpage to avoid dependency on
+  zope.app.pagetemplate.
+  [hvelarde]
+
 * Added french translation.
   [phgross]
 
