--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -4,6 +4,9 @@ Changelog
 1.0.6 (unreleased)
 ------------------
 
+* Tweak CSS to use outline instead of border.
+  [elro]
+
 * Avoid theming ajax response.
   [elro]
 
