First implementation for 2 new feasters.

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,8 +1,15 @@
 Changelog
 =========
 
-1.0.7 (unreleased)
+2.0.0 (unreleased)
 ------------------
+
+* Move hint *Press CTRL to select multiple items* down to *Add* and *Cancel*
+  buttons because users did not read it on top.  [saily]
+
+* Adapt PreviewPane to allow writing own Preview Adapters for custom preview of
+  own types. A default adapter is still available and provides title and
+  description preview for all items.  [saily]
 
 * Switch to ``plone.app.testing``
   [saily]
