Some binder instances for use with plone.supermodel schemas
See https://github.com/plone/plone.app.relationfield/pull/1 for when
they are useful. I'm guessing this is where they were supposed to be
moved, but it never happened.

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -4,6 +4,10 @@ Changelog
 1.0.7 (unreleased)
 ------------------
 
+* Add in some default binder instances, mostly for use with supermodel XML
+  schemas.
+  [lentinj]
+
 * Switch to ``plone.app.testing``
   [saily]
 
