--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,12 @@
 Changelog
 =========
 
+1.0.9 (unreleased)
+------------------
+
+- Nothing changed yet.
+
+
 1.0.8 (2014-10-21)
 ------------------
 
